# ghost

./: Cargo.toml  Dockerfile  Dockerfile.simple  README.md  checker.toml  docker-compose.yaml
src/: main.rs
src/handler/: auto_join.rs  mod.rs  new_room_msg.rs  send_startup_msg.rs
src/health_monitor/: config_builder.rs  message_builder.rs  mod.rs  services.rs  tests.rs  updater.rs
src/notification/: mod.rs  notification.rs  tests.rs  updater.rs
src/status_checker/: config_builder.rs  mod.rs  services.rs  tests.rs
