[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
tracing-subscriber = "0.3.17"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }