[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.3"
anyhow = "1.0.75"
tracing-subscriber = "0.3.17"
reqwest = "^0.11.10" # Check matrix-sdk depedencies
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "e8624706d4e846ab9b163e9bfd542a0bbb1d64f7" }
toml = "0.8.1"
chrono = "0.4.31"
strum = "0.25"
strum_macros = "0.25"