[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
anyhow = "1.0"
tracing-subscriber = "0.3"
reqwest = "0.11" # Check matrix-sdk depedencies
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "1ff2c5bb3e569837620cd6fc3ca8a446bb4987f9" }
toml = "0.8"
chrono = "0.4"
strum = "0.25"
strum_macros = "0.25"